<resources>
    <string name="app_name">NotesFirebase</string>
    <string name="hello">Hello.</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="add_new_note">Add New Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="notes">Notes</string>
    <string name="note_title">note title</string>
    <string name="this_can_be_note_content_that_can_be_long">this can be note content that can be long</string>
    <string name="delete_note">Delete note</string>

</resources>