<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32sp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/login"/>

    <LinearLayout
        android:id="@+id/hellotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/login_icon">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/black"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hellotext"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_edt_tv"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_id"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/password_edt_tv"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="12dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            android:textSize="16sp"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:id="@+id/create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/create_account"/>

    </LinearLayout>




</RelativeLayout>